welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: value unary_! is not a member of Unit
}while(!estPositionFinale())
       ^SnakeBuggle:22: error: not found: value test
				if(estFaceMur){ test = true}
                                                ^SnakeBuggle:24: error: not found: value test
				if(estFaceMur){ test = true}
                                                ^SnakeBuggle:25: error: not found: value test
		case Direction.NORD => if(estFaceMur){ test = true}
                                                       ^SnakeBuggle:27: error: not found: value test
	if(estFaceMur && test == true)
                         ^