welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
baisseBrosse();
do{
	serpent()
}while(!estPositionFinale())
}
def serpent(){
	if( estFaceMur() && getDirection() == Direction.EST){
		gauche();avance();gauche();
	}
	if( estFaceMur() && getDirection() == Direction.OUEST){
		droite();avance();droite();
	}
	do{
		avance()
	}while(!estFaceMur());
}
def estPositionFinale(){
	getDirection() match{
		case Direction.EST => gauche();
				if(estFaceMur){ test = true}
		case Direction.OUEST => droite();
				if(estFaceMur){ test = true}
		case Direction.NORD => if(estFaceMur){ test = true}
	}
	if(estFaceMur && test == true)
		return true;
}
